--- a/public/app.html
+++ b/public/app.html
@@ -129,7 +129,7 @@
           <div id="ltotal">Total Tickets : 100</div>
           <div id="lmax">Max Tickets/User : 5</div>
           <div id="lwin">Winning Tickets : 1</div>
-          <div><input id="buyTickets" type="number" value="1" min="1" max="5" /></div>
+          <input id="buyTickets" type="number" value="1" min="1" max="5" />
           <button id="buy">Buy Tickets</button>
         </div>
       </div>
